Add Kubernetes manifests and improve backend/frontend integration
Introduces Kubernetes deployment, service, config, and secret YAMLs for backend, frontend, and MySQL, enabling container orchestration. Backend DataInitializer now seeds room data with images, and CORS/security config is updated for broader compatibility. Frontend API base URL is set for reverse proxying, nginx config is updated for API routing, and RoomTypeSelector is improved for better UX and error handling.